NIFI-14682 Improved JDBC Driver error message in Connection Pool Services (#10039)
Signed-off-by: David Handermann <exceptionfactory@apache.org>